--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@
                 
                 if (work.type === 'episode') {
                     typeIcon = work.id === 1 ? 'fa-play' : 'fa-film';
-                    badgeText = lang === 'zh' ? `第${work.id}集` : `Episode ${work.id}`;
+                    badgeText = lang === 'zh' ? `第${work.id}集` : `Ep ${work.id}`;
                     bgGradient = 'linear-gradient(45deg, #2A5C8B, #1a3a5f)';
                 } else if (work.type === 'illustration') {
                     typeIcon = work.category === 'serious' ? 'fa-paint-brush' : 'fa-laugh';
